--- a/src/app/components/accordion/accordion.component.html
+++ b/src/app/components/accordion/accordion.component.html
@@ -90,7 +90,7 @@
       <div
         class="p-5 w-100 border border-t-0 border-gray-200 dark:border-gray-700 flex flex-col gap-4"
       >
-        <div class="">
+        <div>
           <label
             for="startDate"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
@@ -104,7 +104,7 @@
             class="block w-full px-3 py-2 border border-gray-300 rounded-lg text-gray-900 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           />
         </div>
-        <div class="">
+        <div>
           <label
             for="endDate"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
