form issue solved, app builded

--- a/src/app/components/author-form/author-form.component.html
+++ b/src/app/components/author-form/author-form.component.html
@@ -22,7 +22,7 @@
         <label
           for="startDate"
           class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Start Date</label
+          >Date of Birth</label
         >
         <input
           type="date"
